Bug 712347 - 'The image cannot be displayed ...' error message is hard to read on a dark background. r=roc
UltraBlame original commit: 7f728aef5ad85bc06bb6502931e2a75d0299edfe

--- a/layout/style/TopLevelImageDocument.css
+++ b/layout/style/TopLevelImageDocument.css
@@ -49,6 +49,8 @@ body {
 
 
 img {
+  color: #eee;
+  text-align: center;
   display: block;
   position: absolute;
   margin: auto;
